[package]
name = "diem-vm-validator"
description = "Diem vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-gas = { workspace = true }
diem-scratchpad = { workspace = true }
diem-state-view = { workspace = true }
diem-storage-interface = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
fail = { workspace = true }

[dev-dependencies]
diem-cached-packages = { workspace = true }
diem-crypto = { workspace = true }
diem-db = { workspace = true }
diem-executor-test-helpers = { workspace = true }
diem-gas = { workspace = true, features = ["testing"] }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
diem-vm-genesis = { workspace = true }
move-core-types = { workspace = true }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["diem-types/fuzzing", "diem-crypto/fuzzing", "diem-db/fuzzing"]
