[package]
name = "diem-openapi-spec-generator"
description = "Diem API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-api = { workspace = true }
diem-config = { workspace = true }
diem-mempool = { workspace = true, features = ["fuzzing"] }
diem-storage-interface = { workspace = true, features = ["fuzzing"] }
diem-types = { workspace = true }
clap = { workspace = true }
