[package]
name = "diem-api-test-context"
description = "Diem API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-api = { workspace = true }
diem-api-types = { workspace = true }
diem-cached-packages = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-db = { workspace = true, features = ["fuzzing"] }
diem-executor = { workspace = true }
diem-executor-types = { workspace = true }
diem-framework = { workspace = true }
diem-genesis = { workspace = true }
diem-mempool = { workspace = true, features = ["fuzzing"] }
diem-mempool-notifications = { workspace = true }
diem-sdk = { workspace = true }
diem-storage-interface = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
diem-vm-logging = { workspace = true }
diem-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
