[package]
name = "diem-api-types"
description = "Diem API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-framework = { workspace = true }
diem-logger = { workspace = true }
diem-openapi = { workspace = true }
diem-storage-interface = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
