[package]
name = "diem-safety-rules"
description = "Diem safety rules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
diem-config = { workspace = true }
diem-consensus-types = { workspace = true }
diem-crypto = { workspace = true }
diem-global-constants = { workspace = true }
diem-infallible = { workspace = true }
diem-logger = { workspace = true }
diem-metrics-core = { workspace = true }
diem-proptest-helpers = { workspace = true, optional = true }
diem-secure-net = { workspace = true }
diem-secure-storage = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vault-client = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
diem-config = { workspace = true, features = ["fuzzing"] }
diem-consensus-types = { workspace = true, features = ["fuzzing"] }
diem-proptest-helpers = { workspace = true }
diem-secure-storage = { workspace = true, features = ["testing"] }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["diem-consensus-types/fuzzing", "diem-config/fuzzing", "proptest", "diem-proptest-helpers"]
testing = ["diem-secure-storage/testing"]
