[package]
name = "diem-crash-handler"
description = "Diem crash handler"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
diem-logger = { workspace = true }
backtrace = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
