[package]
name = "diem-compression"
description = "A unified compression interface and implementation offered by Diem"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
diem-logger = { workspace = true }
diem-metrics-core = { workspace = true }
lz4 = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
diem-crypto = { workspace = true }
diem-types = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
