[package]
name = "diem-ledger"
description = "Library for integration with the Diem app on Ledger"
version = "0.2.0"
publish = true

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = "https://github.com/aptos-labs/diem-core/tree/main/crates/diem-ledger"
rust-version = { workspace = true }

[dependencies]
diem-crypto = { workspace = true }
diem-types = { workspace = true }
hex = { workspace = true }
ledger-apdu = "0.10.0"
ledger-transport-hid = "0.10.0"
once_cell = { workspace = true }
thiserror = { workspace = true }
