[package]
name = "diem-network-checker"
description = "Diem network checker"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-logger = { workspace = true }
diem-network = { workspace = true }
diem-types = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

