[package]
name = "diem-protos"
version = "1.0.0"
authors = ["Diem Labs <opensource@diemlabs.com>"]
description = "Diem Protobuf Definitions"
repository = "https://github.com/aptos-labs/diem-core"
homepage = "https://diemlabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
pbjson = "0.4.0"
prost = "0.11.3"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
tonic = { version = "0.8.3", features = ["tls-roots", "transport", "prost", "gzip", "codegen"] }