[package]
name = "diem-speculative-state-helper"
description = "Diem utils for speculative events & state (due to speculative txn execution)"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the diem-speculative crate.
[dependencies]
anyhow = { workspace = true }
diem-infallible = { workspace = true }
crossbeam = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
