[package]
name = "diem-telemetry-service"
description = "Web service to receive telemetry from nodes and ingest it to backends"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-crypto-derive = { workspace = true }
diem-infallible = { workspace = true }
diem-logger = { workspace = true }
diem-metrics-core = { workspace = true }
diem-rest-client = { workspace = true }
diem-types = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
debug-ignore = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
gcp-bigquery-client = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rand ={ workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
