[package]
name = "diem-telemetry"
description = "Diem utilities to collect observability data from a node and send it to a remote destination"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-api = { workspace = true }
diem-config = { workspace = true }
diem-consensus = { workspace = true }
diem-crypto = { workspace = true }
diem-db = { workspace = true }
diem-infallible = { workspace = true }
diem-logger = { workspace = true }
diem-mempool = { workspace = true }
diem-metrics-core = { workspace = true }
diem-network = { workspace = true }
diem-node-resource-metrics = { workspace = true }
diem-runtimes = { workspace = true }
diem-state-sync-driver = { workspace = true }
diem-telemetry-service = { workspace = true }
diem-types = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
